base landing page with bubbles and gradient

--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.5.6",
+    "@types/react-color": "^3.0.12",
     "axios": "^1.6.8",
-    "crisp-sdk-web": "^1.0.22",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "form-data": "^4.0.0",
+    "html-to-image": "^1.11.11",
     "mailgun.js": "^9.4.1",
     "mongodb": "^5.9.2",
     "mongoose": "^7.6.10",
@@ -30,6 +31,7 @@
     "nextjs-toploader": "^1.6.11",
     "nodemailer": "^6.9.13",
     "react": "18.2.0",
+    "react-color": "^2.19.3",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-syntax-highlighter": "^15.5.0",
