Export Code / GIF

--- a/package.json
+++ b/package.json
@@ -15,11 +15,13 @@
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.5.6",
+    "@types/gif.js": "^0.2.5",
     "@types/react-color": "^3.0.12",
     "axios": "^1.6.8",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "form-data": "^4.0.0",
+    "gif.js": "^0.2.0",
     "html-to-image": "^1.11.11",
     "mongodb": "^5.9.2",
     "mongoose": "^7.6.10",
