use intermediate canvas for css animation

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.5.6",
     "@types/gif.js": "^0.2.5",
+    "@types/html2canvas": "^1.0.0",
     "@types/react-color": "^3.0.12",
     "axios": "^1.6.8",
     "eslint": "8.47.0",
@@ -23,6 +24,7 @@
     "form-data": "^4.0.0",
     "gif.js": "^0.2.0",
     "html-to-image": "^1.11.11",
+    "html2canvas": "^1.4.1",
     "mongodb": "^5.9.2",
     "mongoose": "^7.6.10",
     "next": "^14.1.4",
