--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^1.0.0",
-    "@headlessui/react": "^1.7.18",
+    "@headlessui/react": "^1.7.19",
+    "@heroicons/react": "^2.1.4",
     "@mdx-js/loader": "^2.3.0",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.5.6",
